fix : java version 문법 에러